# Memory_Lane_Gen_A_Thon

./: .gitignore  README.md  check_gemini_key.py  summarize-pdf.py  test_pdf_export.py
backend/: app.py  pyproject.toml  requirements.txt  test_semantic_search.py
backend/memory_lane/: __init__.py  ai_pipeline.py  chatbot.py  database.py  extractor.py  pdf_export.py  routes.py  worker.py
backend/static/css/: app.css  chatbot.css
backend/static/js/: app.js  chatbot.js
backend/templates/: chatbot.html  export.html  index-0.html  index.html  login.html
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
