[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "flask==3.0.3",
    "flask-cors==4.0.0",
    "google-generativeai>=0.8.6",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "readability-lxml==0.8.1",
    "reportlab==4.0.7",
    "requests==2.32.2",
    "sentence-transformers==2.2.2",
    "trafilatura>=2.1.0",
    "vadersentiment==3.3.2",
]
